--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
     flask: 
         build: ./docker/python
         container_name: "flask_board"
+        #command: flask run --host 0.0.0.0 --port 5000
         tty: true
         volumes: 
             - ./python:/src
@@ -33,6 +34,6 @@ services:
         tty: true
         volumes: 
             - ./vue:/src
-        working_dir: "/vue"
+        working_dir: "/src"
         ports: 
-            - 8000:3000
+            - 8000:8080
